--- a/preprocessing/download_chunk.ipynb
+++ b/preprocessing/download_chunk.ipynb
@@ -6,12 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "MIN_COUNT = 5\n",
+    "STRIDE = 15\n",
+    "LENGTH = 40"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "79406"
+       "701412"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +57,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def select_top_counts():\n",
+    "def select_top_counts(min_count):\n",
     "    selected = {}\n",
     "    with open('../transformed/data/links.txt', 'r', encoding='utf-8', errors='replace') as file:\n",
     "        for line in file:\n",
@@ -80,7 +91,7 @@
     "    selected = pd.DataFrame(\n",
     "        list(\n",
     "            filter(\n",
-    "                lambda x: x['count'] >= 35,\n",
+    "                lambda x: x['count'] >= min_count,\n",
     "                sorted(\n",
     "                    [\n",
     "                        {\n",
@@ -98,13 +109,13 @@
     "\n",
     "    return selected\n",
     "\n",
-    "selected = select_top_counts()\n",
+    "selected = select_top_counts(MIN_COUNT)\n",
     "selected.__len__()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +178,8 @@
       "wiki_6.parquet\n",
       "wiki_7.parquet\n",
       "wiki_8.parquet\n",
-      "wiki_9.parquet\n"
+      "wiki_9.parquet\n",
+      "501716\n"
      ]
     }
    ],
@@ -179,111 +191,147 @@
     "        df = filter_df(pd.read_parquet(f'wiki/{file}'), selected)\n",
     "        first = False\n",
     "        continue\n",
-    "    df = pd.concat(\n",
-    "        [\n",
-    "            df, \n",
-    "            filter_df(pd.read_parquet(f'wiki/{file}'), selected)\n",
-    "        ], \n",
-    "        axis=0\n",
-    "    )\n",
-    "df = df.drop_duplicates(['article_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop('text', axis=1).to_parquet('data/articles_over_35.parquet')"
+    "    df = pd.concat([df, filter_df(pd.read_parquet(f'wiki/{file}'), selected)], axis=0)\n",
+    "df = df.drop_duplicates(['article_id'])\n",
+    "print(len(df))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7671920"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chunks = [] \n",
-    "i = 0\n",
-    "stride = 25\n",
-    "\n",
-    "for _, row in df.iterrows():\n",
-    "    start = 0\n",
-    "    end = 50\n",
-    "    text = row['text'].split()\n",
-    "    while end < len(text):\n",
-    "        chunks.append({\n",
-    "            'article_id': row['article_id'], \n",
-    "            'chunk_id': i, \n",
-    "            'chunk': ' '.join(text[start : end])\n",
-    "        })\n",
-    "        i += 1\n",
-    "        \n",
-    "        start += stride \n",
-    "        end += stride\n",
-    "    \n",
-    "    if start <= len(text):\n",
-    "        chunks.append({\n",
-    "            'article_id': row['article_id'], \n",
-    "            'chunk_id': i, \n",
-    "            'chunk': ' '.join(text[start :])\n",
-    "        })\n",
-    "        i += 1\n",
-    "\n",
-    "del(df)\n",
-    "chunks = pd.DataFrame(chunks)\n",
-    "len(chunks)"
+    "df.drop('text', axis=1).to_parquet(f'data/articles_top{MIN_COUNT}_len{LENGTH}_stride{STRIDE}.parquet')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "chunks.to_parquet('data/chunks_over_35.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "included Chattanooga, Tennessee natives Sam Gooden, Richard Brooks, and his brother Arthur Brooks. B\n",
-      "y 1958, the Roosters had a new manager in Eddie Thomas, a record deal with Vee-Jay Records, and a ne\n",
-      "w name: Jerry Butler & the Impressions. The group's first hit single was 1958's \"For Your Precious L\n",
-      "ove\", which hit No. 11 on the US pop chart and No. 3 on the R&B chart. However, soon after the relea\n",
-      "\n"
+      "processed article: 0\n",
+      "processed article: 10000\n",
+      "processed article: 20000\n",
+      "processed article: 30000\n",
+      "processed article: 40000\n",
+      "processed article: 50000\n",
+      "processed article: 60000\n",
+      "processed article: 70000\n",
+      "processed article: 80000\n",
+      "processed article: 90000\n",
+      "processed article: 100000\n",
+      "processed article: 110000\n",
+      "processed article: 120000\n",
+      "processed article: 130000\n",
+      "processed article: 140000\n",
+      "processed article: 150000\n",
+      "processed article: 160000\n",
+      "processed article: 170000\n",
+      "processed article: 180000\n",
+      "processed article: 190000\n",
+      "processed article: 200000\n",
+      "processed article: 210000\n",
+      "processed article: 220000\n",
+      "processed article: 230000\n",
+      "processed article: 240000\n",
+      "processed article: 250000\n",
+      "processed article: 260000\n",
+      "processed article: 270000\n",
+      "processed article: 280000\n",
+      "processed article: 290000\n",
+      "processed article: 300000\n",
+      "processed article: 310000\n",
+      "processed article: 320000\n",
+      "processed article: 330000\n",
+      "processed article: 340000\n",
+      "processed article: 350000\n",
+      "processed article: 360000\n",
+      "processed article: 370000\n",
+      "processed article: 380000\n",
+      "processed article: 390000\n",
+      "processed article: 400000\n",
+      "processed article: 410000\n",
+      "processed article: 420000\n",
+      "processed article: 430000\n",
+      "processed article: 440000\n",
+      "processed article: 450000\n",
+      "processed article: 460000\n",
+      "processed article: 470000\n",
+      "processed article: 480000\n",
+      "processed article: 490000\n",
+      "processed article: 500000\n"
      ]
     }
    ],
    "source": [
-    "def print_text(text):\n",
-    "    start = 0\n",
-    "    end = 100\n",
-    "    while end < len(text):\n",
-    "        print(text[start : end])\n",
-    "        start += 100\n",
-    "        end += 100\n",
-    "    print(text[end :])\n",
+    "import json\n",
     "\n",
-    "print_text(chunks.sample().iloc[0]['chunk'])"
+    "buffer = [] \n",
+    "BUFFER_SIZE = 100000\n",
+    "chunk_id = 0\n",
+    "articles_processed = 0\n",
+    "\n",
+    "def clear_buffer(buffer):\n",
+    "    with open(f'data/chunks_top{MIN_COUNT}_len{LENGTH}_stride{STRIDE}.jsonl', 'a', encoding='utf-8') as file:\n",
+    "        for row in buffer:\n",
+    "            file.write(json.dumps(row) + '\\n')\n",
+    "    return []\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    if articles_processed % 10000 == 0:\n",
+    "        print('processed article:', articles_processed)\n",
+    "    start = 0\n",
+    "    end = LENGTH\n",
+    "    text = row['text'].split()\n",
+    "    while end < len(text):\n",
+    "        buffer.append({\n",
+    "            'article_id': row['article_id'], \n",
+    "            'chunk_id': chunk_id, \n",
+    "            'chunk': ' '.join(text[start : end])\n",
+    "        })\n",
+    "        chunk_id += 1\n",
+    "        \n",
+    "        start += STRIDE \n",
+    "        end += STRIDE\n",
+    "\n",
+    "        if len(buffer) >= BUFFER_SIZE:\n",
+    "            buffer = clear_buffer(buffer)\n",
+    "    \n",
+    "    if start <= len(text):\n",
+    "        buffer.append({\n",
+    "            'article_id': row['article_id'], \n",
+    "            'chunk_id': chunk_id, \n",
+    "            'chunk': ' '.join(text[start :])\n",
+    "        })\n",
+    "        chunk_id += 1\n",
+    "\n",
+    "    articles_processed += 1\n",
+    "\n",
+    "if buffer:\n",
+    "    buffer = clear_buffer(buffer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def print_text(text):\n",
+    "#     start = 0\n",
+    "#     end = 75\n",
+    "#     while end < len(text):\n",
+    "#         print(text[start : end])\n",
+    "#         start += 75\n",
+    "#         end += 75\n",
+    "#     print(text[end :])\n",
+    "\n",
+    "# print_text(chunks.sample().iloc[0]['chunk'])"
    ]
   }
  ],
