--- a/preprocessing/embed.ipynb
+++ b/preprocessing/embed.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,18 +42,14 @@
     "        {\n",
     "            'chunk_id': chunk_ids[i], \n",
     "            'article_id': article_ids[i],\n",
-    "            'embedding': base64.b64encode(\n",
-    "                np.array(\n",
-    "                    x.embedding\n",
-    "                ).tobytes()\n",
-    "            ).decode('utf-8'), \n",
+    "            'embedding': np.array(x.embedding).tobytes(), \n",
     "            'model': \"text-embedding-3-small\"\n",
     "        } \n",
     "        for i, x in enumerate(result.data)\n",
     "    ]\n",
     "\n",
     "def append_to_disk(embeddings):\n",
-    "        with open('data/embeddings3.jsonl', 'a', encoding='utf-8') as file:\n",
+    "        with open('D:/wiki-guess/embed_top20_len40_stride40.jsonl', 'a', encoding='utf-8') as file:\n",
     "            for row in embeddings:\n",
     "                file.write(json.dumps(row) + '\\n')\n",
     "    \n",
@@ -73,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1013,7 @@
     "\n",
     "client = OpenAI(api_key=os.environ.get(\"API_KEY\"))\n",
     "\n",
-    "df = pd.read_parquet('data/chunks2.parquet')\n",
+    "df = pd.read_parquet('chunks_top20_len40_stride40.parquet')\n",
     "\n",
     "print('total to embed:', len(df))\n",
     "\n",
