--- a/preprocessing/migrations.ipynb
+++ b/preprocessing/migrations.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "bae9bb37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TOP_N = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "d540049f",
    "metadata": {},
    "outputs": [],
@@ -14,15 +24,19 @@
     "    cursor = conn.cursor()\n",
     "\n",
     "    statements = [\n",
-    "        \"\"\"\n",
-    "        create table if not exists embeddings (\n",
-    "            id integer primary key,\n",
-    "            vector blob,\n",
-    "            article_id integer,\n",
-    "            chunk_id integer,\n",
-    "            model text\n",
-    "        )\n",
-    "        \"\"\",\n",
+    "        \"drop table if exists chunks\",\n",
+    "        \"drop table if exists articles\",\n",
+    "        \"drop table if exists embeddings\",\n",
+    "\n",
+    "        # \"\"\"\n",
+    "        # create table if not exists embeddings (\n",
+    "        #     id integer primary key,\n",
+    "        #     vector blob,\n",
+    "        #     article_id integer,\n",
+    "        #     chunk_id integer,\n",
+    "        #     model text\n",
+    "        # )\n",
+    "        # \"\"\",\n",
     "        \"\"\"\n",
     "        create table if not exists chunks (\n",
     "            chunk_id integer,\n",
@@ -35,7 +49,8 @@
     "            article_id integer,\n",
     "            title text,\n",
     "            clean_title text,\n",
-    "            url text\n",
+    "            url text,\n",
+    "            count integer\n",
     "        )\n",
     "        \"\"\"\n",
     "    ]\n",
@@ -50,204 +65,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "32e5464e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n",
-      "Clearing buffer.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sqlite3\n",
-    "import json \n",
-    "import base64\n",
+    "# import sqlite3\n",
+    "# import json \n",
+    "# import base64\n",
     "\n",
-    "insert_statement = \"insert into embeddings (vector, article_id, chunk_id, model) values (?, ?, ?, ?)\"\n",
+    "# insert_statement = \"insert into embeddings (vector, article_id, chunk_id, model) values (?, ?, ?, ?)\"\n",
     "\n",
-    "def insert_embeddings(path, insert_statement):\n",
-    "    try:\n",
-    "        conn = sqlite3.Connection('data/data.db')\n",
-    "        cursor = conn.cursor()\n",
+    "# def insert_embeddings(path, insert_statement):\n",
+    "#     try:\n",
+    "#         conn = sqlite3.Connection('data/data.db')\n",
+    "#         cursor = conn.cursor()\n",
     "\n",
-    "        buffer = []\n",
-    "        with open(path, 'r') as file:\n",
-    "            for line in file:\n",
-    "                jsonl = json.loads(line)\n",
-    "                jsonl['embedding'] = base64.b64decode(jsonl.get('embedding', ''))\n",
-    "                buffer.append((\n",
-    "                    jsonl.get('embedding', ''), \n",
-    "                    jsonl.get('article_id', -1), \n",
-    "                    jsonl.get('chunk_id', -1), \n",
-    "                    jsonl.get('model', '')\n",
-    "                ))\n",
-    "                if len(buffer) > 10000:\n",
-    "                    print(\"Clearing buffer.\")\n",
-    "                    cursor.executemany(insert_statement, buffer)\n",
-    "                    conn.commit()\n",
-    "                    buffer = []\n",
-    "            if buffer:\n",
-    "                print(\"Clearing buffer.\")\n",
-    "                cursor.executemany(insert_statement, buffer)\n",
-    "                conn.commit()\n",
+    "#         buffer = []\n",
+    "#         with open(path, 'r') as file:\n",
+    "#             for line in file:\n",
+    "#                 jsonl = json.loads(line)\n",
+    "#                 jsonl['embedding'] = base64.b64decode(jsonl.get('embedding', ''))\n",
+    "#                 buffer.append((\n",
+    "#                     jsonl.get('embedding', ''), \n",
+    "#                     jsonl.get('article_id', -1), \n",
+    "#                     jsonl.get('chunk_id', -1), \n",
+    "#                     jsonl.get('model', '')\n",
+    "#                 ))\n",
+    "#                 if len(buffer) > 10000:\n",
+    "#                     print(\"Clearing buffer.\")\n",
+    "#                     cursor.executemany(insert_statement, buffer)\n",
+    "#                     conn.commit()\n",
+    "#                     buffer = []\n",
+    "#             if buffer:\n",
+    "#                 print(\"Clearing buffer.\")\n",
+    "#                 cursor.executemany(insert_statement, buffer)\n",
+    "#                 conn.commit()\n",
     "\n",
-    "    finally:\n",
-    "        conn.close()\n",
+    "#     finally:\n",
+    "#         conn.close()\n",
     "\n",
     "\n",
-    "insert_embeddings('data/embeddings2.jsonl', insert_statement)\n",
-    "insert_embeddings('data/embeddings3.jsonl', insert_statement)"
+    "# insert_embeddings('data/embeddings2.jsonl', insert_statement)\n",
+    "# insert_embeddings('data/embeddings3.jsonl', insert_statement)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cb42cd18",
    "metadata": {},
    "outputs": [],
@@ -256,14 +121,11 @@
     "\n",
     "conn = sqlite3.Connection('data/data.db')\n",
     "\n",
-    "articles1 = pd.read_parquet('data/articles.parquet').rename(columns={'lower_title': 'clean_title'})\n",
-    "articles2 = pd.read_parquet('data/articles2.parquet').rename(columns={'lower_title': 'clean_title'})\n",
+    "pd.read_parquet('data/articles_top5_len40_stride15.parquet') \\\n",
+    "    .rename(columns={'lower_title': 'clean_title'}) \\\n",
+    "    .to_sql('articles', conn, if_exists='append', index=False)\n",
     "\n",
-    "pd.concat([articles1, articles2], axis=0).drop_duplicates().to_sql('articles', conn, if_exists='append', index=False)\n",
-    "\n",
-    "del articles1\n",
-    "del articles2 \n",
-    "\n",
+    "conn.commit()\n",
     "conn.close()"
    ]
   },
@@ -275,23 +137,31 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import json \n",
     "\n",
     "conn = sqlite3.Connection('data/data.db')\n",
     "\n",
-    "chunks1 = pd.read_parquet('data/chunks.parquet')\n",
-    "chunks2 = pd.read_parquet('data/chunks2.parquet')\n",
+    "buffer = []\n",
+    "with open('data/chunks_top5_len40_stride15.jsonl', 'r') as file:\n",
+    "    for line in file:\n",
+    "        buffer.append(json.loads(line))\n",
     "\n",
-    "pd.concat([chunks1, chunks2], axis=0).drop_duplicates().to_sql('chunks', conn, if_exists='append', index=False)\n",
+    "        if len(buffer) > 100000:\n",
+    "            pd.DataFrame(buffer).to_sql('chunks', conn, if_exists='append', index=False)\n",
+    "            buffer = []\n",
+    "            conn.commit()\n",
     "\n",
-    "del chunks1\n",
-    "del chunks2\n",
+    "if buffer:\n",
+    "    pd.DataFrame(buffer).to_sql('chunks', conn, if_exists='append', index=False)\n",
+    "    buffer = []\n",
+    "    conn.commit()\n",
     "\n",
     "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "141a42de",
    "metadata": {},
    "outputs": [],
@@ -302,10 +172,11 @@
     "\n",
     "indices = [\n",
     "    'create index idx_articles_article_id on articles(article_id)',\n",
+    "    'create index idx_articles_count on articles(count)',\n",
     "    'create index idx_chunks_article_id on chunks(article_id)',\n",
     "    'create index idx_chunks_chunk_id on chunks(chunk_id)',\n",
-    "    'create index idx_embeddings_article_id on embeddings(article_id)',\n",
-    "    'create index idx_embeddings_chunk_id on embeddings(chunk_id)'\n",
+    "    # 'create index idx_embeddings_article_id on embeddings(article_id)',\n",
+    "    # 'create index idx_embeddings_chunk_id on embeddings(chunk_id)'\n",
     "]\n",
     "\n",
     "for index in indices:\n",
