--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,6 +2,279 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI\n",
+    "import os \n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "client = OpenAI(api_key=os.environ.get('OPENAI_API_KEY'))\n",
+    "DB_PATH = 'data/data.db'\n",
+    "\n",
+    "def get_daily_word_vector_live(daily_word: int):\n",
+    "    conn = sqlite3.Connection(DB_PATH)\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\"\"\n",
+    "        select chunk\n",
+    "        from chunks\n",
+    "        where article_id == ?\n",
+    "    \"\"\", (daily_word,))\n",
+    "    chunks = [x[0] for x in cur.fetchall()]\n",
+    "    result = client.embeddings.create(\n",
+    "        input=chunks,\n",
+    "        model=\"text-embedding-3-small\"\n",
+    "    )\n",
+    "    return np.array([np.array(x.embedding) for x in result.data]).mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1536,)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_daily_word_vector_live(71329952).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
+      "(1, 2)\n",
+      "(2, 2)\n",
+      "(3, 2)\n",
+      "(4, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import numpy as np\n",
+    "\n",
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "# cur.execute(\"\"\"\n",
+    "#     select a.title, c.chunk\n",
+    "#     from embeddings e\n",
+    "#     join articles a\n",
+    "#         using (article_id)\n",
+    "#     join chunks c\n",
+    "#         using (chunk_id)\n",
+    "#     where e.id == ?\n",
+    "# \"\"\", (167680,))\n",
+    "cur.execute(\"\"\"\n",
+    "    select chunk_id, count(*)\n",
+    "    from chunks\n",
+    "    group by chunk_id\n",
+    "    order by count(*) desc\n",
+    "    limit 5\n",
+    "\"\"\")\n",
+    "for row in cur.fetchall():\n",
+    "    print(row)\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(19017269,\n",
+       "  'World population',\n",
+       "  'world population',\n",
+       "  'https://en.wikipedia.org/wiki/World%20population',\n",
+       "  67)]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import numpy as np\n",
+    "\n",
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"\"\"\n",
+    "    select *\n",
+    "    from articles\n",
+    "    where article_id == ?\n",
+    "\"\"\", (19017269,))\n",
+    "cur.fetchall()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "article_id = 44579187\n",
+    "\n",
+    "cur.execute(\"\"\"\n",
+    "    select e.vector, e.chunk_id, c.chunk\n",
+    "    from (\n",
+    "        select vector, chunk_id \n",
+    "        from embeddings\n",
+    "        where article_id == ?\n",
+    "    ) as e\n",
+    "    join (\n",
+    "        select chunk_id, chunk\n",
+    "        from chunks\n",
+    "        where article_id == ?\n",
+    "    ) as c\n",
+    "        using (chunk_id)\n",
+    "\"\"\", (article_id, article_id))\n",
+    "\n",
+    "guess = cur.fetchall()\n",
+    "guess_matrix = np.array([np.frombuffer(row[0]) for row in guess])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(159563,\n",
+       " 'both old and new anime titles both on home video and theatrically, aided by the Scotland Loves Anime film festival. From 2015 to 2018, Anime Limited served as the distributors for Funimation in the British Isles. History On 14 December 2012, Kazé UK representative and Scotland Loves Anime director Andrew Partridge launched the social media and website for Anime Limited, and stated that he would be launching a new anime distribution company in 2013, with',\n",
+       " 0.7591181392379761)"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.79301268, 0.75911814, 0.77018558, 0.78948745, 0.80729594,\n",
+       "       0.84301049, 0.84762888, 0.82576959, 0.82698408, 0.82828016,\n",
+       "       0.79397142, 0.77697281])"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerator = guess_matrix @ target\n",
+    "denominator_rhs = np.sqrt(np.sum(target ** 2)) \n",
+    "denominator_lhs = np.sqrt(np.sum(guess_matrix ** 2, axis=1))\n",
+    "denominator = denominator_lhs * denominator_rhs\n",
+    "distances = 1 - (numerator / denominator)\n",
+    "indices = np.argsort(distances)\n",
+    "\n",
+    "[(guess[i][1], guess[i][2], distances[i]) for i in indices][: limit]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5156283378601074"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "times = []\n",
+    "\n",
+    "for _ in range(10000):\n",
+    "    start = time.time()\n",
+    "    numerator = guess @ target\n",
+    "    denominator_rhs = np.sqrt(np.sum(target ** 2)) \n",
+    "    denominator_lhs = np.sqrt(np.sum(guess ** 2, axis=1))\n",
+    "    denominator = denominator_lhs * denominator_rhs\n",
+    "    distance = 1 - (numerator / denominator)\n",
+    "    times.append((time.time() - start) * 10000)\n",
+    "np.mean(times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.6936564445495605"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.spatial.distance import cosine\n",
+    "\n",
+    "times = []\n",
+    "\n",
+    "for _ in range(10000):\n",
+    "    start = time.time()\n",
+    "    brute = []\n",
+    "    for i in range(12):\n",
+    "        brute.append(cosine(target, guess[i, :]))\n",
+    "    brute = np.array(brute)\n",
+    "    times.append((time.time() - start) * 10000)\n",
+    "np.mean(times)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
