--- a/preprocessing/generate_targets.ipynb
+++ b/preprocessing/generate_targets.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "36660ac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"            \n",
+    "            \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "43849fa8",
    "metadata": {},
    "outputs": [],
@@ -21,21 +32,20 @@
     "    client = OpenAI(api_key=os.environ.get('OPENAI_API_KEY'))\n",
     "\n",
     "    response = client.responses.create(\n",
-    "        model=\"o3-mini\",\n",
+    "        model=\"gpt-4.1-nano\",\n",
     "        input=f\"\"\"\n",
     "            Write a string representation of a Python list where each element is a title of a popular Wikipedia article.\n",
     "\n",
     "            The list should have {n_options} elements.\n",
     "\n",
-    "            The list should not just be the most popular articles. Instead, it should be articles that are interesting choices,\n",
-    "            but are well-known enough that they are possible to guess as part of a challenging guessing game.\n",
+    "            The list should be articles that are interesting choices, but are well-known enough that they are possible to \n",
+    "            guess as part of a challenging guessing game.\n",
     "\n",
-    "            Try really hard to make weird choices that still match the specs! When you are too predictable, the game is not fun.\n",
+    "            Be unpredictable! This query will be ran many times and each time it should have a different result.\n",
     "\n",
     "            Example output:\n",
     "\n",
     "            [\"Nintendo 3DS\", \"Dopamine\", \"Chinese language\", \"Bishop\", \"Cross-dressing\", \"Arnold Schwarzenegger\", \"Water tower\", \"Bouldering\", \"Wax\", \"Flag of Canada\"]\n",
-    "            \n",
     "        \"\"\"\n",
     "    )\n",
     "    return response.output_text\n",
@@ -46,21 +56,14 @@
     "    conn.close()\n",
     "    return data\n",
     "\n",
-    "def get_target(title):\n",
+    "def get_matches(title):\n",
     "    try:\n",
     "        return execute_sql(f\"\"\"\n",
-    "            select article_id, vector, title, url, chunk\n",
-    "            from embeddings\n",
-    "            join (\n",
-    "                select article_id, title, url\n",
-    "                from articles \n",
-    "                where clean_title like '%{title}%'\n",
-    "                order by length(clean_title)\n",
-    "                limit 1\n",
-    "            ) as a\n",
-    "                using(article_id)\n",
-    "            join chunks \n",
-    "                using (article_id)\n",
+    "            select article_id, title, count\n",
+    "            from articles \n",
+    "            where clean_title like '%{title}%'\n",
+    "            order by count desc\n",
+    "            limit 1\n",
     "        \"\"\")\n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -70,97 +73,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "d08f0385",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtering 50 AI choices.\n",
-      "Found a match! Len targets: 0\n",
-      "Found a match! Len targets: 1\n",
-      "Found a match! Len targets: 2\n",
-      "Found a match! Len targets: 3\n",
-      "Found a match! Len targets: 4\n",
-      "Found a match! Len targets: 5\n",
-      "Found a match! Len targets: 6\n",
-      "Found a match! Len targets: 7\n",
-      "Found a match! Len targets: 8\n",
-      "Found a match! Len targets: 9\n",
-      "Found a match! Len targets: 10\n",
-      "Found a match! Len targets: 11\n",
-      "Found a match! Len targets: 12\n",
-      "Found a match! Len targets: 13\n",
-      "Found a match! Len targets: 14\n",
-      "Found a match! Len targets: 15\n",
-      "Found a match! Len targets: 16\n",
-      "Matched targets: 17\n"
-     ]
-    }
-   ],
-   "source": [
-    "targets = set()\n",
-    "n = 50\n",
-    "\n",
-    "for _ in range(1):\n",
-    "    ai_choices = get_completion(n)\n",
-    "    ai_choices_obj = eval(ai_choices)\n",
-    "    ai_choices_clean = [x.lower().strip() for x in ai_choices_obj]\n",
-    "    print(f\"Filtering {n} AI choices.\")\n",
-    "    for ai_choice in ai_choices_clean:     \n",
-    "        target = get_target(ai_choice)\n",
-    "        if not target:\n",
-    "            continue\n",
-    "        print(f'Found a match! Len targets: {len(targets)}')\n",
-    "        targets.add(target.pop()['article_id'])\n",
-    "    print('Matched targets:', len(targets))\n",
-    "\n",
-    "# Write targets out to disk.\n",
-    "with open('data/ai_targets.txt', 'a', encoding='utf-8') as file:\n",
-    "    for article_id in list(targets):\n",
-    "        file.write(str(article_id) + '\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1c96fe45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dedup previously written target ids.\n",
-    "prev_targets = set()\n",
-    "with open('data/ai_targets.txt', 'r') as file:\n",
-    "    for line in file:\n",
-    "        if line.strip() != '':\n",
-    "            prev_targets.add(line.strip())\n",
+    "import json\n",
     "\n",
-    "with open('data/ai_targets.txt', 'wt') as file:\n",
-    "    for article_id in list(prev_targets):\n",
-    "        file.write(str(article_id).strip() + '\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "318ac59c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "106"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prev_targets.__len__()"
+    "targets = set()\n",
+    "n = 100\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "    try:\n",
+    "        ai_choices = get_completion(n)\n",
+    "        ai_choices = ai_choices.strip().lower().replace(r\"`\", '').replace('python', '').strip()\n",
+    "        ai_choices_obj = eval(ai_choices)\n",
+    "        ai_choices_clean = [x.lower().strip() for x in ai_choices_obj]\n",
+    "        for ai_choice in ai_choices_clean:\n",
+    "            matches = get_matches(ai_choice.replace(\"'\", \"\"))\n",
+    "            if not matches:\n",
+    "                continue\n",
+    "            targets.add(tuple([x for x in matches.pop().values()]))\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "# Write targets out to disk.\n",
+    "with open('data/ai_targets.jsonl', 'a', encoding='utf-8') as file:\n",
+    "    for row in list(targets):\n",
+    "        file.write(json.dumps({'article_id': row[0], 'count': row[2]}) + '\\n')"
    ]
   }
  ],
