--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,6 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20353360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>63174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>277008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   article_id\n",
+       "0    20353360\n",
+       "1       63174\n",
+       "2      277008"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from flask import Flask, jsonify\n",
+    "import sqlite3\n",
+    "from markupsafe import escape\n",
+    "from flask_cors import CORS\n",
+    "from copy import deepcopy\n",
+    "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI\n",
+    "import os \n",
+    "from collections import Counter\n",
+    "import pandas as pd\n",
+    "load_dotenv()\n",
+    "\n",
+    "client = OpenAI(api_key=os.environ.get('OPENAI_API_KEY'))\n",
+    "DB_PATH = 'data/data.db'\n",
+    "\n",
+    "conn = sqlite3.Connection(DB_PATH)\n",
+    "cur = conn.cursor()\n",
+    "# cur.execute(\"\"\"\n",
+    "#     select chunk\n",
+    "#     from chunks\n",
+    "#     where article_id == ?\n",
+    "# \"\"\", (19017269,))\n",
+    "# chunks = ' '.join([x[0] for x in cur.fetchall()]).split()\n",
+    "pd.read_sql(\"\"\"select article_id from articles \n",
+    "            where count > 50 \n",
+    "            order by random() limit 3\"\"\", conn)\n",
+    "\n",
+    "# pd.read_sql(\"select * from articles where article_id == 11126830 limit 8\"\"\", conn)\n",
+    "\n",
+    "# cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
