--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 5195436, 1735785583.287105, '127.0.0.1'), (2, 5195436, 1735785583.9004815, '127.0.0.1'), (3, 13478, 1735785584.7886071, '127.0.0.1'), (4, 12255, 1735785585.2132974, '127.0.0.1'), (5, 34243, 1735785586.0122585, '127.0.0.1')]\n"
+     "ename": "OperationalError",
+     "evalue": "no such table: article",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m conn \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mConnection(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstable/data/data.db\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m cur \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[1;32m----> 7\u001b[0m cur\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mselect * from article limit 4\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(cur\u001b[38;5;241m.\u001b[39mfetchall())\n\u001b[0;32m     10\u001b[0m conn\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[1;31mOperationalError\u001b[0m: no such table: article"
      ]
     }
    ],
@@ -20,7 +24,7 @@
     "conn = sqlite3.Connection('stable/data/data.db')\n",
     "cur = conn.cursor()\n",
     "\n",
-    "cur.execute('select * from guesses')\n",
+    "cur.execute('select * from article limit 4')\n",
     "print(cur.fetchall())\n",
     "\n",
     "conn.close()"
