--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -27,31 +27,30 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>article_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>clean_title</th>\n",
-       "      <th>url</th>\n",
-       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20353360</td>\n",
-       "      <td>Grenade</td>\n",
-       "      <td>grenade</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Grenade</td>\n",
-       "      <td>74</td>\n",
+       "      <td>180546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>284376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>165584</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   article_id    title clean_title                                    url  \\\n",
-       "0    20353360  Grenade     grenade  https://en.wikipedia.org/wiki/Grenade   \n",
-       "\n",
-       "   count  \n",
-       "0     74  "
+       "   article_id\n",
+       "0      180546\n",
+       "1      284376\n",
+       "2      165584"
       ]
      },
      "execution_count": 1,
@@ -85,11 +84,11 @@
     "# \"\"\", (19017269,))\n",
     "# chunks = ' '.join([x[0] for x in cur.fetchall()]).split()\n",
     "\n",
-    "# pd.read_sql(\"\"\"select article_id from articles \n",
-    "#             where count > 50 \n",
-    "#             order by random() limit 3\"\"\", conn)\n",
+    "pd.read_sql(\"\"\"select article_id from articles \n",
+    "            where count > 50 and count < 100\n",
+    "            order by random() limit 3\"\"\", conn)\n",
     "\n",
-    "pd.read_sql(\"select * from articles where article_id == 20353360 limit 8\"\"\", conn)\n",
+    "# pd.read_sql(\"select * from articles where article_id == 20353360 limit 8\"\"\", conn)\n",
     "\n",
     "# cur.fetchall()"
    ]
