--- a/preprocessing/migrations.ipynb
+++ b/preprocessing/migrations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d540049f",
    "metadata": {},
    "outputs": [],
@@ -28,15 +28,16 @@
     "        \"drop table if exists articles\",\n",
     "        \"drop table if exists embeddings\",\n",
     "\n",
-    "        # \"\"\"\n",
-    "        # create table if not exists embeddings (\n",
-    "        #     id integer primary key,\n",
-    "        #     vector blob,\n",
-    "        #     article_id integer,\n",
-    "        #     chunk_id integer,\n",
-    "        #     model text\n",
-    "        # )\n",
-    "        # \"\"\",\n",
+    "        \"\"\"\n",
+    "        create table if not exists embeddings (\n",
+    "            id integer primary key,\n",
+    "            vector blob,\n",
+    "            article_id integer,\n",
+    "            chunk_id integer,\n",
+    "            model text\n",
+    "        )\n",
+    "        \"\"\",\n",
+    "\n",
     "        \"\"\"\n",
     "        create table if not exists chunks (\n",
     "            chunk_id integer,\n",
@@ -44,6 +45,7 @@
     "            article_id integer\n",
     "        )\n",
     "        \"\"\",\n",
+    "        \n",
     "        \"\"\"\n",
     "        create table if not exists articles (\n",
     "            article_id integer,\n",
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "32e5464e",
    "metadata": {},
    "outputs": [],
