--- a/preprocessing/scratch.ipynb
+++ b/preprocessing/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -32,15 +32,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>180546</td>\n",
+       "      <td>4227</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>284376</td>\n",
+       "      <td>2371232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>165584</td>\n",
+       "      <td>14666430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1310531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>453584</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -48,12 +56,14 @@
       ],
       "text/plain": [
        "   article_id\n",
-       "0      180546\n",
-       "1      284376\n",
-       "2      165584"
+       "0        4227\n",
+       "1     2371232\n",
+       "2    14666430\n",
+       "3     1310531\n",
+       "4      453584"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,10 +95,10 @@
     "# chunks = ' '.join([x[0] for x in cur.fetchall()]).split()\n",
     "\n",
     "pd.read_sql(\"\"\"select article_id from articles \n",
-    "            where count > 50 and count < 100\n",
-    "            order by random() limit 3\"\"\", conn)\n",
+    "            where count > 50 and count < 150\n",
+    "            order by random() limit 5\"\"\", conn)\n",
     "\n",
-    "# pd.read_sql(\"select * from articles where article_id == 20353360 limit 8\"\"\", conn)\n",
+    "# pd.read_sql(\"select * from articles where title like '%seinfeld%' order by count desc\"\"\", conn)\n",
     "\n",
     "# cur.fetchall()"
    ]
